--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
         <thead>
           <tr>
             <th>Zadanie</th>
+            <th class="has-text-right">Akcje</th>
           </tr>
         </thead>
         <tbody id="tasksList">
@@ -59,6 +60,7 @@
       <div class="notification is-hidden is-light" id="tasksListMsg"></div>
     </div>
   </div>
+  
 
   <script src="index.js"></script>
 </body>
